added design for nodes and temp nodes

--- a/files/test.html
+++ b/files/test.html
@@ -24,6 +24,18 @@
   <div>
     <button class="done" id="done"> Done </button>
   </div>
+  <div>
+    <ul>
+      <li id="0">
+          <button id="b0" class="tasks">🞬</button>
+          Task
+      </li>
+      <li id="1">
+          <button id="b1" class="tasks">🞬</button>
+          Task 2
+      </li>
+    </ul>
+  </div>
 
 </body>
 </html>
