CSS was modefied. centre fnd scale

--- a/files/test.html
+++ b/files/test.html
@@ -6,13 +6,14 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <h1> Планы на неделю </h1>
-
-    <div>
+    <div class="centered">
+      <h1> Планы на неделю </h1>
+    </div>
+    <div class="centered">
       <input placeholder="Сдеать проект" id="task">
     </div>
 
-  <div>
+  <div class="centered">
     <button class="weekdays" id="Mon">ПН</button>
     <button class="weekdays" id="Two">ВТ</button>
     <button class="weekdays" id="Whe">СР</button>
@@ -21,10 +22,10 @@
     <button class="day_off" id="Sat">СБ</button>
     <button class="day_off" id="Sun">ВС</button>
   </div>
-  <div>
+  <div class="centered">
     <button class="done" id="done"> Done </button>
   </div>
-  <div>
+  <div class="centered">
     <ul>
       <li id="0">
           <button id="b0" class="tasks">🞬</button>
