Optimisate js code

--- a/files/test.html
+++ b/files/test.html
@@ -26,7 +26,7 @@
     <button class="done" id="done"> Done </button>
   </div>
   <div class="centered">
-    <ul>
+    <ul id="task">
       <li id="0">
           <button id="b0" class="tasks">🞬</button>
           Task
