--- a/files/test.html
+++ b/files/test.html
@@ -10,7 +10,7 @@
       <h1> Планы на неделю </h1>
     </div>
     <div class="centered">
-      <input placeholder="Сдеать проект" id="task">
+      <input placeholder="Сдеать проект" id="input">
     </div>
 
   <div class="centered">
